Bottom menu icon, Refresh button in top bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,4 +190,9 @@
     <string name="pref_title_vibrate">Vibrate</string>
     <string name="title_activity_tabbed">TabbedActivity</string>
     <string name="section_format">Image: %1$d</string>
+    <string name="action_refresh">Refresh</string>
+    <string name="comment">Comment</string>
+    <string name="view">View</string>
+    <string name="download">Download</string>
+    <string name="share">Share</string>
 </resources>
